# edge-sentinel

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  app.py  docker-compose.yml  pyproject.toml  seed.py
agents/: __init__.py  config.py  guardrails.py  harness_client.py  main.py  tools.py
docs/: architecture.md  configuration.md
pytest/: __init__.py
tests/: conftest.py  test_guardrails.py  test_imports.py
