[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agents-layer"
version = "0.1.0"
description = "Agentic layer service for edge-sentinel"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "AGPL-3.0"}
dependencies = [
    "httpx>=0.25.0",
    "pydantic>=2.6",
    "langgraph>=0.1.6",
    "agent-harness @ git+https://github.com/redevops-io/agent-harness.git",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
    "mypy>=1.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["agents*"]
